# resume-parser

./: .gitignore  README.md  examples.py  pyproject.toml  requirements.txt
sample_resumes/: Brijesh_Patel_ATS.docx
src/: conftest.py
src/config/: extraction_config.py
src/coordinators/: resume_extractor.py
src/coordinators/tests/: test_resume_extractor_new_fields.py
src/exceptions/: __init__.py
src/extractors/: __init__.py  certifications_extractor.py  education_extractor.py  experience_analytics_extractor.py  factory.py  list_field_extractor.py  location_extractor.py  phone_extractor.py  projects_extractor.py  publications_extractor.py  structured_extractor.py  summary_extractor.py  urls_extractor.py  volunteer_extractor.py  work_experience_extractor.py
src/extractors/strategies/: llm.py
src/extractors/strategies/tests/: test_llm_strategy.py
src/extractors/tests/: test_experience_analytics_extractor.py  test_factory.py  test_factory_new_fields.py  test_list_field_extractor.py  test_location_extractor.py  test_phone_extractor.py  test_structured_extractor.py  test_summary_extractor.py  test_urls_extractor.py  test_work_experience_extractor.py
src/framework/: resume_parser_framework.py
src/interfaces/: __init__.py  extracting_strategy.py
src/models/: __init__.py  certification.py  contact_info.py  education.py  experience_analytics.py  project.py  publication.py  resume_data.py  skill_entry.py  volunteer.py  work_experience.py
src/models/tests/: test_resume_data.py
src/parsers/: pdf_parser.py  word_parser.py
src/parsers/tests/: generate_test_data.py  generate_test_pdfs.py  test_pdf_parser.py  test_word_parser.py
